hotfix: fix z-index on site nav

--- a/sitemedia/scss/components/_navigation.scss
+++ b/sitemedia/scss/components/_navigation.scss
@@ -11,6 +11,10 @@ nav#site-nav {
     display: flex;
     flex-flow: row wrap;
     z-index: 5;
+    // ensure nav has highest z-index on page when it contains targeted menu (i.e. mobile menu)
+    &:has(ul:target) {
+        z-index: 10;
+    }
     @include breakpoints.for-tablet-landscape-up {
         flex-flow: row nowrap;
         align-items: center;
